--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "mysql2": "^1.6.5",
     "sequelize": "^5.12.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
