--- a/config/config.json
+++ b/config/config.json
@@ -1,26 +1,24 @@
 {
-  "development": {
-    "username": "root",
-    "password": "password",
-    "database": "emptypantry",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
-  },
-  "test": {
-    "username": "root",
-    "password": "password",
-    "database": "emptypantry",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
-  },
-  "production": {
-    "username": "root",
-    "password": "password",
-    "database": "emptypantry",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "development": {
+      "username": "root",
+      "password": "Marine6226@@",
+      "database": "todolist",
+      "host": "127.0.0.1",
+      "port": 3306,
+      "dialect": "mysql"
+    },
+    "test": {
+      "username": "root",
+      "password": "Marine6226@@",
+      "database": "database_test",
+      "host": "127.0.0.1",
+      "dialect": "mysql"
+    },
+    "production": {
+      "username": "root",
+      "password": "Marine@@",
+      "database": "database_production",
+      "host": "127.0.0.1",
+      "dialect": "mysql"
+    }
   }
-}
