--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "maya",
+  "name": "create-read",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "mysql2": "^1.6.5",
-    "sequelize": "^5.12.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.1"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "watch": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Rthorpesr/maya.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Rthorpesr/maya/issues"
-  },
-  "homepage": "https://github.com/Rthorpesr/maya#readme"
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^4.44.2"
+  }
 }
