--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "Marine6226@@",
+      "password": "password",
       "database": "todolist",
       "host": "127.0.0.1",
       "port": 3306,
@@ -9,14 +9,14 @@
     },
     "test": {
       "username": "root",
-      "password": "Marine6226@@",
+      "password": "password",
       "database": "database_test",
       "host": "127.0.0.1",
       "dialect": "mysql"
     },
     "production": {
       "username": "root",
-      "password": "Marine@@",
+      "password": "password",
       "database": "database_production",
       "host": "127.0.0.1",
       "dialect": "mysql"
